Bumped dependencies.